modules/cli/src/test/resources/bad/disamb/imports/pack1/Import18b.scr
module bad.disamb.imports.pack1.Import18b;


global protocol Proto2(role C, role D)
{
	Import18b() from C to D;
}

